js/js.translator/testData/incremental/invalidation/privateObjectsLeakThroughSealedInterface/lib1/interface.0.kt
sealed interface SealedInterface {
    konst extraNumber get() = 0

    fun getNumber() = 0
}
